--- a/github_crossdomain.html
+++ b/github_crossdomain.html
@@ -58,7 +58,7 @@
             position: static !important;
           "
         ></div>
-        <a class="conversion_button" href="form.html">今すぐクリック!</a>
+        <a class="conversion_button" href="https://charming-llama-5bdb9b.netlify.app/conversion/lp">今すぐクリック!</a>
       </div>
     </div>
   </body>
