--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         <input type="text" name="mail" id="mail" />
       </div>
     </form>
-    <a href="ThanksPage.html">登録</a>
+    <a href="https://charming-llama-5bdb9b.netlify.app/conversion/thankspage">登録</a>
   </body>
 </html>
