--- a/github_crossdomain.html
+++ b/github_crossdomain.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <!-- Letro -->
-    <script>
+<!--     <script>
       window.__letroUgcGadget = window.__letroUgcGadget || {};
       __letroUgcGadget.advertiser_id = 1466;
       __letroUgcGadget.auto_linker = true;
@@ -38,7 +38,7 @@
         ltag.setAttribute("data-ec-site-id", "660a4340ec682");
         document.body.appendChild(ltag);
       });
-    </script>
+    </script> -->
 
     <link rel="stylesheet" href="../style.css" />
     <meta charset="UTF-8" />
