--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <!-- Letro -->
-<script>
+<!-- <script>
   window.__letroUgcGadget = window.__letroUgcGadget || {};
   __letroUgcGadget.advertiser_id = 1466;
   (function(d, s, id) {
@@ -35,7 +35,7 @@
     ltag.setAttribute('data-ec-site-id', "660a4340ec682");
     document.body.appendChild(ltag);
   });
-</script>
+</script> -->
 <!-- End Letro -->
 
     <link rel="stylesheet" href="style.css" />
