--- a/index.html
+++ b/index.html
@@ -1,42 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <!-- Letro -->
-<!-- <script>
-  window.__letroUgcGadget = window.__letroUgcGadget || {};
-  __letroUgcGadget.advertiser_id = 1466;
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "https://letro.jp/tags/js/letro.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'letro-jssdk'));
-</script>
-<script>
-  window.addEventListener('load', function() {
-    var id = 'letro-review-js';
-    var sid = 'letro-review-style';
-    if (document.getElementById(id)) {
-      return;
-    }
-    var ram = new Date().getTime();
-    var lrjs = document.createElement('script');
-    lrjs.id = id;
-    lrjs.src = 'https://letro.jp/tags/js/letro-review.js?v=' + ram;
-    var lrs = document.createElement('link');
-    lrs.id = sid;
-    lrs.rel = 'stylesheet';
-    lrs.href = 'https://letro.jp/tags/css/letro-review.css?v=' + ram;
-    document.body.appendChild(lrjs);
-    document.head.appendChild(lrs);
-    var ltag = document.createElement('div');
-    ltag.setAttribute('class', '__letro-review-tag');
-    ltag.setAttribute('data-ec-site-id', "660a4340ec682");
-    document.body.appendChild(ltag);
-  });
-</script> -->
-<!-- End Letro -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5F65VGCF');</script>
+<!-- End Google Tag Manager -->
 
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
@@ -44,6 +15,10 @@
     <title>cross domain</title>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5F65VGCF"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <form action="" method="post">
       <div>
         <label for="name">お名前</label>
