--- a/github_crossdomain.html
+++ b/github_crossdomain.html
@@ -29,6 +29,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <input type="text" name="mail" id="mail" />
       </div>
     </form>
-    <a href="https://charming-llama-5bdb9b.netlify.app/conversion/thankspage">登録</a>
+    <a href="https://takehara-shohei.github.io/Letro-test/LPpaeg.html">LPpaeg.htmlへ遷移します</a>
   </body>
 </html>
